--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "verbatimModuleSyntax": false
-  }
+    "forceConsistentCasingInFileNames": true
+    // Remove 'rootDir': './src'
+  },
+  // Explicitly tell the compiler to look inside 'src'
+  "include": ["src/**/*"] 
 }
